Upgrade `graalwasm-starter`.